--- a/ru/contact/index.html
+++ b/ru/contact/index.html
@@ -7,20 +7,20 @@
 <link rel="stylesheet" href="/_nuxt/contact.DCP6bPYJ.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.DdJsG_00.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?4cd3e3e1-763d-47d2-94a8-bd56f2709fb0">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BeYuGSv8.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/csb-VjrD.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BXsHX7mu.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DgNkWPDk.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BBJ5Mh3o.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D280HlpL.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CRNin1X-.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/D-T8Z1Az.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DOpwTsSb.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?3b35537d-43c8-451a-8c38-03a1d0ed0d85">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CWSyFVps.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/VV9vuYJO.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CgdNaA4D.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BGTAXVf6.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cuyir6k-.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/F7XnulZO.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bv0WjwhX.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/C2b_VZJo.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dx4LCdcL.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/BeYuGSv8.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?4cd3e3e1-763d-47d2-94a8-bd56f2709fb0">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736135169387]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"4cd3e3e1-763d-47d2-94a8-bd56f2709fb0",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/CWSyFVps.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?3b35537d-43c8-451a-8c38-03a1d0ed0d85">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736135483215]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"3b35537d-43c8-451a-8c38-03a1d0ed0d85",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
