--- a/ru/contact/index.html
+++ b/ru/contact/index.html
@@ -7,20 +7,20 @@
 <link rel="stylesheet" href="/_nuxt/contact.DCP6bPYJ.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.IWjWQhaI.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?7af6ad37-125b-47b3-a2df-a4ea23dc0658">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DeZH37HV.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/NksrnCCJ.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Di_VXuSZ.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D-vmkPp4.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DxBjpuN-.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DvYZUXZW.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/jzmmlGur.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CBS78ntg.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BR_kRWwF.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?147bd101-04e1-4549-b570-2ec9c7dd14b4">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CL_rVj4U.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/-aMJEeur.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/F1ZQXfj9.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CMhNC_Dl.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DqxcthpW.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D-89ngS8.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DaGVuW_O.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/kvSKRU7U.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dr4bKUAz.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/DeZH37HV.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?7af6ad37-125b-47b3-a2df-a4ea23dc0658">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736136661058]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"7af6ad37-125b-47b3-a2df-a4ea23dc0658",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/CL_rVj4U.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?147bd101-04e1-4549-b570-2ec9c7dd14b4">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736137172773]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"147bd101-04e1-4549-b570-2ec9c7dd14b4",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
