--- a/works/moth/index.html
+++ b/works/moth/index.html
@@ -7,23 +7,23 @@
 <link rel="stylesheet" href="/_nuxt/Topbar.CkE6sM6w.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Contact.CQKS7Qcw.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/moth/_payload.json?7af6ad37-125b-47b3-a2df-a4ea23dc0658">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DeZH37HV.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Dtt-lLx5.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Di_VXuSZ.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/moth/_payload.json?147bd101-04e1-4549-b570-2ec9c7dd14b4">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CL_rVj4U.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CNC1ANtH.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/F1ZQXfj9.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CixeEtFq.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D-vmkPp4.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BIHU8_Cd.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/4W_Wm3Gf.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BGvR9RVO.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/jzmmlGur.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CBS78ntg.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BR_kRWwF.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/IKGdLC2n.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CMhNC_Dl.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/C0RyOsDb.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/hVKAgcuL.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CxhdT_qx.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DaGVuW_O.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/kvSKRU7U.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dr4bKUAz.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/DeZH37HV.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/moth/_payload.json?7af6ad37-125b-47b3-a2df-a4ea23dc0658">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/moth",1736136661110]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"7af6ad37-125b-47b3-a2df-a4ea23dc0658",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/CL_rVj4U.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/moth/_payload.json?147bd101-04e1-4549-b570-2ec9c7dd14b4">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/moth",1736137172778]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"147bd101-04e1-4549-b570-2ec9c7dd14b4",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
